로지스틱 회귀 예제 추가, 오늘 점심에 물리치료 받음. 좀 피곤해서 더 많이 공부 못한게 아쉬움. 내일 한의원 가서 진료 받고 요번 한주 배운 거 복습할 계획. 할수있다.

--- a/ML/자습ML.ipynb
+++ b/ML/자습ML.ipynb
@@ -2993,7 +2993,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6255,7 +6255,7 @@
         "warnings.filterwarnings('ignore')\n",
         "%matplotlib inline"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6279,7 +6279,7 @@
         "# Amount : 카드 사용액\n",
         "# Class : 0은 정상 사용, 1은 부정 카드 사용"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6543,7 +6543,7 @@
         "# 284807 레코드(행, 건수)\n",
         "# 31 피처와 타깃값(레이블값)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6577,7 +6577,7 @@
         "    df_copy.drop('Time', axis=1, inplace=True)\n",
         "    return df_copy"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6602,7 +6602,7 @@
         "\n",
         "X_train, X_test, y_train, y_test = get_train_test_dataset(card_df)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6623,7 +6623,7 @@
         "\n",
         "# 0과 1의 비율에 맞춰 학습 데이터와 테스트 데이터가 잘 분리되었음"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6669,7 +6669,7 @@
         "    print('정확도: {0:.4f}, 정밀도: {1:.4f}, 재현율: {2:.4f},\\\n",
         "    F1: {3:.4f}, AUC:{4:.4f}'.format(accuracy, precision, recall, f1, roc_auc))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6699,7 +6699,7 @@
         "# 불균형한 데이터라서 재현율 부분을 중요하게 생각하면 되겠는데\n",
         "# 재현율이 낮아서 예측 모델로 만족스럽지 못함"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6730,7 +6730,7 @@
         "    pred_proba = model.predict_proba(ftr_test)[:, 1] # 예측 확률\n",
         "    get_clf_eval(tgt_test, pred, pred_proba)  # 실제 데이터, 예측값, 예측 확률"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6756,7 +6756,7 @@
         "# LightGBM이 LogisticRegression보다 전반적으로 성능이 좋음\n",
         "# 특히 정밀도와 재현율이 성능 많이 향상되었음"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6794,7 +6794,7 @@
         "# 불균형하게 가지고 있음\n",
         "# 작은 값들이 길게 롱테일을 가지고 있는 구조"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6849,7 +6849,7 @@
         "    \n",
         "    return df_copy"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6882,7 +6882,7 @@
         "# LightGBM은 정밀도와 재현율이 약간 향상됨\n",
         "# 많이 차이는 없음"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6926,7 +6926,7 @@
         "    \n",
         "    return df_copy"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6960,7 +6960,7 @@
         "\n",
         "# LightGBM은 정밀도, 재현율 등 약간씩 성능 향상"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7014,7 +7014,7 @@
         "# Class 값과 상관도가 높은 피처들 : x출에서 v12, v14, v17 (짙은 빨간색)\n",
         "# 이 중에서 v14에 해당되는 이상치 확인"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7074,7 +7074,7 @@
         "    \n",
         "    return outlier_index"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7092,7 +7092,7 @@
         "\n",
         "# 4개 인덱스 : 이 인덱스에 해당되는 행은 삭제할 것임"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7124,7 +7124,7 @@
         "        \n",
         "    return df_copy"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7157,7 +7157,7 @@
         "# 로지스틱 회귀 VS LightGBM\n",
         "# LightGBM이 정밀도, 재현율, F1에서 좀 더 성능이 좋은 것으로 나타남"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7205,7 +7205,7 @@
         "# 적용 후 레이블 값 두 개가 동일 : (증식 되었음)\n",
         "# 0    199020,  1    199020"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7234,7 +7234,7 @@
         "# 원래의 레이블 값 두 개 분포\n",
         "y_train.value_counts()"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7272,7 +7272,7 @@
         "# 정밀도와 F1 스코어 : 엄청 떨어짐 (어이없는 수치)\n",
         "# 이 모델을 실제 적용하기는 힘듦 : 정밀도가 너무 낮기 때문에 "
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7320,7 +7320,7 @@
         "    plt.legend(); plt.grid()\n",
         "    plt.show()"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7338,7 +7338,7 @@
         "# 재현율은 좋은데 정밀도가 너무 낮음 - 실제 적용하기 어려움\n",
         "# 부적합한 모델"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7378,7 +7378,7 @@
         "# LightGBM의 경우 전반적으로 향상되었고, \n",
         "# 특히 정밀도와 재현율을 상당한 수준으로 끌어 올릴 수 있었음"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7412,7 +7412,7 @@
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7438,7 +7438,7 @@
         "\n",
         "plt.scatter(X, y)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7479,7 +7479,7 @@
       "source": [
         "np.random.randn(10, 1)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7516,7 +7516,7 @@
       "source": [
         "np.random.rand(10, 1)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7560,7 +7560,7 @@
         "line_fitter = LinearRegression() # 객체 생성\n",
         "line_fitter.fit(X, y)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7590,7 +7590,7 @@
         "y_predicted = line_fitter.predict(np.array([[1.5248]]))\n",
         "y_predicted"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7619,7 +7619,7 @@
         "# 회귀 계수 : coef_ 속성\n",
         "line_fitter.coef_"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7648,7 +7648,7 @@
         "# 절편 확인 : y = 6 + 4X (절편 : 6)\n",
         "line_fitter.intercept_"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7680,7 +7680,7 @@
         "plt.plot(X, line_fitter.predict(X))\n",
         "plt.show()"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7741,7 +7741,7 @@
         "\n",
         "# 예측해야 할 값 : PRICE (레이블값, 결정값, 타깃값)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7932,7 +7932,7 @@
         "\n",
         "# null 값없고 모두 float 형"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7990,7 +7990,7 @@
         "# RM(방 개수) : 양의 방향 선형성이 가장 큼 (방의 크기가 클스록 가격이 증가)\n",
         "# LSTAT(하위 계층의 비율) : 음의 방향 선형성 가장 큼(LSTAT이 작을수록 PRICE가 증가)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8050,7 +8050,7 @@
         "# Variance score : 0.757\n",
         "# 나쁜 수치는 아니지만 만족할만한 수치는 아님"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8080,7 +8080,7 @@
         "print('절편 값 : ', lr.intercept_)\n",
         "print('회귀 계수 값 : ', np.round(lr.coef_, 1))"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8115,7 +8115,7 @@
         "# 특이 사항 : NOX 피처의 회기 계수가 - 값으로 너무 큼 (NOX 값 때문에 예측 오류값이 달라질 수 있음)\n",
         "# 최적화 수행하면서 피처 회기 계수 변화도 같이 살펴볼 예정"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8147,10 +8147,10 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "WQNqkp25u667",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "WQNqkp25u667",
         "outputId": "5efec67a-a617-49db-9885-3a0304a1f223"
       },
       "source": [
@@ -8174,7 +8174,7 @@
         "# RMSE값이 약간 더 높게 나타남\n",
         "# 만족할 만한 수치는 아님"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8188,9 +8188,149 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9A5qhG27hl31"
+      },
+      "source": [
+        "## 로지스틱 회귀 예제"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "beumSJJDu-qn"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "%matplotlib inline\n",
+        "\n",
+        "from sklearn.datasets import load_breast_cancer\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "\n",
+        "# 데이터 로드\n",
+        "cancer = load_breast_cancer()"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rG0e07B-h7FX"
+      },
+      "source": [
+        "# 선형 회귀 계열의 로지스틱 회귀는\n",
+        "# 데이터의 정규 분포도에 따라\n",
+        "# 예측 성능 영향을 받을 수 있으므로\n",
+        "# 먼저 정규 분포 형태의 표준 스케일링을 적용한 뒤\n",
+        "# 학습/테스트 데이터 세트 분리\n",
+        "\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# 스케일링 : 평균이 0, 분산이 1인 데이터 분포로 변환\n",
+        "scaler = StandardScaler()\n",
+        "data_scaled = scaler.fit_transform(cancer.data)\n",
+        "\n",
+        "# 데이터 세트 분리\n",
+        "X_train , X_test , y_train , y_test = train_test_split(data_scaled , cancer.target, test_size=0.3, random_state=0)\n",
+        "  "
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bzB3-mtOh-o8",
+        "outputId": "40526e9e-49ef-47f3-cabc-a304785e73f7"
+      },
+      "source": [
+        "# 로지스틱 회귀를 이용하여 학습 및 예측 수행 평가\n",
+        "\n",
+        "from sklearn.metrics import accuracy_score, roc_auc_score\n",
+        "\n",
+        "lr_clf = LogisticRegression(solver='liblinear')\n",
+        "# slover : 최적화 문제에 사용하는 알고리즘\n",
+        "\n",
+        "lr_clf.fit(X_train, y_train)\n",
+        "lr_preds = lr_clf.predict(X_test)\n",
+        "\n",
+        "# 정확도 accuracy와 roc_auc 측정\n",
+        "print('accuracy : {0:.3f}'.format(accuracy_score(y_test, lr_preds)))\n",
+        "print('roc_auc : {0:.3f}'.format(roc_auc_score(y_test, lr_preds)))"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "accuracy : 0.982\n",
+            "roc_auc : 0.979\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q5ogAFL8iA_d",
+        "outputId": "b6adeb86-6152-4850-c3c2-f5acf2339164"
+      },
+      "source": [
+        "# 하이퍼 파라미터 설정 최적 평균 정확도 확인\n",
+        "\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "\n",
+        "# 하이퍼 파라미터 설정\n",
+        "params = {\n",
+        "    'penalty' : ['l2', 'l1'],\n",
+        "    'C' : [0.01, 0.1, 1, 5, 10]\n",
+        "}\n",
+        "\n",
+        "# GridSea4chCV 이용해서 최적의 하이퍼 파라미터 찾음\n",
+        "grid_clf = GridSearchCV(lr_clf, param_grid=params, scoring='accuracy', cv=3)\n",
+        "grid_clf.fit(data_scaled, cancer.target)\n",
+        "\n",
+        "print('최적 하이퍼 파라미터 : {0} , 최적 평균 정확도 : {1:.3f}'.format(grid_clf.best_params_, grid_clf.best_score_))"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "최적 하이퍼 파라미터 : {'C': 0.1, 'penalty': 'l2'} , 최적 평균 정확도 : 0.979\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4mV-hHvMiHsM"
+      },
+      "source": [
+        "로지스틱 회귀 정리\n",
+        "- 가볍고 빠르면서도\n",
+        "- 이진 분류 예측 성능도 뛰어남\n",
+        "- 따라서 이진 분류기의 기본 모델로 사용하는 경우가 많음\n",
+        "- 또한 희소 행렬로 표현되는 텍스트 기반의 분류에서도 자주 사용됨"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sOKSAJgNiEIh"
       },
       "source": [
         ""
