부족한 금액 계산하기

--- a/python/프로그래머스.ipynb
+++ b/python/프로그래머스.ipynb
@@ -6,7 +6,7 @@
       "name": "프로그래머스.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN2NrMTslaIp9y0xClwUmat",
+      "authorship_tag": "ABX9TyMqb0Mg7PE7AtTWBK/Vxip4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -115,12 +115,41 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VNoNhjmQhIMR"
+      },
+      "source": [
+        "부족한 금액 계산하기"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "czANpZ9hoqOO"
       },
       "source": [
-        ""
+        "def solution(price, money, count):\n",
+        "        \n",
+        "    to_pay = 0\n",
+        "    \n",
+        "    for ride_count in range(count+1):\n",
+        "        \n",
+        "        to_pay += price * ride_count\n",
+        "        \n",
+        "        answer = to_pay - money\n",
+        "        \n",
+        "        if answer >= 0:\n",
+        "            answer\n",
+        "        else:\n",
+        "            answer = 0\n",
+        "    # to_pay = sum(map(lambda x: x * price, range(1, count+1)))\n",
+        "    # answer = to_pay - money\n",
+        "    # if answer >= 0:\n",
+        "    #     answer\n",
+        "    # else:\n",
+        "    #     answer = 0\n",
+        "    return answer"
       ],
       "execution_count": null,
       "outputs": []
