--- a/python/프로그래머스.ipynb
+++ b/python/프로그래머스.ipynb
@@ -6,7 +6,7 @@
       "name": "프로그래머스.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMqb0Mg7PE7AtTWBK/Vxip4",
+      "authorship_tag": "ABX9TyNjLe2pDXjyox1+KNyskE8O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -155,12 +155,56 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v-tT8KaFtFRD"
+      },
+      "source": [
+        "모의고사"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Yk1dC-1CoqK-"
       },
       "source": [
-        ""
+        "def solution(answers):\n",
+        "    score = [0,0,0]\n",
+        "    winner_list = []\n",
+        "    \n",
+        "    supo_1 = [1,2,3,4,5]\n",
+        "    supo_2 = [2,1,2,3,2,4,2,5]\n",
+        "    supo_3 = [3,3,1,1,2,2,4,4,5,5]\n",
+        "    \n",
+        "    supo_1 = supo_1 + supo_1 * len(answers)\n",
+        "    supo_2 = supo_2 + supo_2 * len(answers)\n",
+        "    supo_3 = supo_3 + supo_3 * len(answers)\n",
+        "    \n",
+        "    for answer2,supo_1_an, supo_2_an, supo_3_an in zip(answers,supo_1,supo_2,supo_3):\n",
+        "                  \n",
+        "        if supo_1_an == answer2:\n",
+        "            score[0] += 1\n",
+        "        else:\n",
+        "            score[0] += 0\n",
+        "\n",
+        "        if supo_2_an == answer2:\n",
+        "            score[1] += 1\n",
+        "        else:\n",
+        "            score[1] += 0\n",
+        "\n",
+        "        if supo_3_an == answer2:\n",
+        "            score[2] += 1\n",
+        "        else:\n",
+        "            score[2] += 0\n",
+        "            \n",
+        "    \n",
+        "    for i in range(3):\n",
+        "        if score[i] == max(score):\n",
+        "            winner_list.append(i+1)\n",
+        "    \n",
+        "    \n",
+        "    return winner_list"
       ],
       "execution_count": null,
       "outputs": []
