소수구하기/왜 안돼 왜안돼

--- a/python/프로그래머스.ipynb
+++ b/python/프로그래머스.ipynb
@@ -6,7 +6,7 @@
       "name": "프로그래머스.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNjLe2pDXjyox1+KNyskE8O",
+      "authorship_tag": "ABX9TyOGYweF0m1Huuxku5ITtTY0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -205,6 +205,54 @@
         "    \n",
         "    \n",
         "    return winner_list"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iS0Sc3Yetjdm"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6JETchCztkhi"
+      },
+      "source": [
+        "소수구하기"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4vKgI3Zqtjav"
+      },
+      "source": [
+        "import itertools\n",
+        "def solution(nums):\n",
+        "    \n",
+        "    list_nums = list(itertools.combinations(nums,3))\n",
+        "    answer = 0    \n",
+        "    \n",
+        "    for number in range(len(nums)-1):\n",
+        "        \n",
+        "        is_this_so = sum(list_nums[number])\n",
+        "        \n",
+        "        for i in range(2, is_this_so):\n",
+        "                       \n",
+        "            if is_this_so%i == 0:\n",
+        "                b = 1\n",
+        "        if b == 0:\n",
+        "            answer += 1           \n",
+        "            \n",
+        "    return answer"
       ],
       "execution_count": null,
       "outputs": []
