재귀함수/ 망할 것

--- a/python/프로그래머스.ipynb
+++ b/python/프로그래머스.ipynb
@@ -6,7 +6,7 @@
       "name": "프로그래머스.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOGYweF0m1Huuxku5ITtTY0",
+      "authorship_tag": "ABX9TyMm2hjteK8COzi07039LrxO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -253,6 +253,213 @@
         "            answer += 1           \n",
         "            \n",
         "    return answer"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Pf77QWr1t29T",
+        "outputId": "b203bd29-74db-4930-b256-1e5387152cee"
+      },
+      "source": [
+        "num = [1,2,3,4]\n",
+        "solution(num)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W7k9nO9St9WK"
+      },
+      "source": [
+        "def solution(nums):\n",
+        "    \n",
+        "    n = len(nums)\n",
+        "    picked = []\n",
+        "    start = 0\n",
+        "    answer = 0\n",
+        "    \n",
+        "    def recur(start, n):\n",
+        "        b = 0\n",
+        "        \n",
+        "        if len(picked) == 3:\n",
+        "            for i in range(2, sum(picked)):\n",
+        "                if sum(picked)%i == 0:\n",
+        "                    b = 1\n",
+        "                if b == 0:\n",
+        "                    answer += 1\n",
+        "            \n",
+        "    \n",
+        "        for pick_num in range(start, n):\n",
+        "            picked.append(nums[pick_num])\n",
+        "            start = picked[-1] + 1\n",
+        "            recur(start, n)\n",
+        "            picked.pop()\n",
+        "            \n",
+        "    recur(start, n)\n",
+        "            \n",
+        "    return answer"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n-s-aqm3it6r"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t1kvNRGCgvAS"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UJz5SMZzgC_e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d159cc63-0268-431f-acbc-42a839fc84b1"
+      },
+      "source": [
+        "num = int(input())\n",
+        "\n",
+        "def solution(num, m):\n",
+        "    \n",
+        "    if m == 1:\n",
+        "        print('_'*(4*num)+'\"재귀함수가 뭔가요?\"')\n",
+        "        print('_'*(4*num)+'\"재귀함수는 자기 자신을 호출하는 함수라네\"')\n",
+        "        print('_'*(4*num)+'라고 답변하였지.')\n",
+        "    if m == 0:\n",
+        "        return\n",
+        "    print('어느 한 컴퓨터공학과 학생이 유명한 교수님을 찾아가 물었다.')\n",
+        "\n",
+        "    print('_'*(4*(num-m))+'\"재귀함수가 뭔가요?\"')\n",
+        "    print('_'*(4*(num-m))+'\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.')\n",
+        "    print('_'*(4*(num-m))+'마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.')\n",
+        "    print('_'*(4*(num-m))+'그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"')\n",
+        "    \n",
+        "    solution(num,m-1)\n",
+        "solution(num,0)"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cg1YSfy5lFra",
+        "outputId": "56cacd47-d73f-4c97-a0ec-c3df4e2d84f1"
+      },
+      "source": [
+        "num = int(input())\n",
+        "print(\"어느 한 컴퓨터공학과 학생이 유명한 교수님을 찾아가 물었다.\")\n",
+        "def recur(num,idx):\n",
+        "    if num == idx:\n",
+        "        for i in range(idx):\n",
+        "            print(\"____\", end=\"\")\n",
+        "        print(\"\\\"재귀함수가 뭔가요?\\\"\")\n",
+        "        for i in range(idx):\n",
+        "            print(\"____\", end=\"\")\n",
+        "        print(\"\\\"재귀함수는 자기 자신을 호출하는 함수라네\\\"\")\n",
+        "        for i in range(idx):\n",
+        "            print(\"____\", end=\"\")\n",
+        "        print(\"라고 답변하였지.\")\n",
+        "        return\n",
+        "    for i in range(idx):\n",
+        "        print(\"____\",end=\"\")\n",
+        "    print(\"\\\"재귀함수가 뭔가요?\\\"\")\n",
+        "    for i in range(idx):\n",
+        "        print(\"____\",end=\"\")\n",
+        "    print(\"\\\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.\")\n",
+        "    for i in range(idx):\n",
+        "        print(\"____\",end=\"\")\n",
+        "    print(\"마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.\")\n",
+        "    for i in range(idx):\n",
+        "        print(\"____\",end=\"\")\n",
+        "    print(\"그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\\\"\")\n",
+        "\n",
+        "    recur(num,idx+1)\n",
+        "    for i in range(idx):\n",
+        "        print(\"____\",end=\"\")\n",
+        "    print(\"라고 답변하였지.\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "recur(num,0)"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2\n",
+            "어느 한 컴퓨터공학과 학생이 유명한 교수님을 찾아가 물었다.\n",
+            "\"재귀함수가 뭔가요?\"\n",
+            "\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.\n",
+            "마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.\n",
+            "그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"\n",
+            "____\"재귀함수가 뭔가요?\"\n",
+            "____\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.\n",
+            "____마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.\n",
+            "____그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"\n",
+            "________\"재귀함수가 뭔가요?\"\n",
+            "________\"재귀함수는 자기 자신을 호출하는 함수라네\"\n",
+            "________라고 답변하였지.\n",
+            "____라고 답변하였지.\n",
+            "라고 답변하였지.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HKiMp2PElOuQ"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
