K번째수/ 이건 쉬운데.. 재귀함수 부분 공부 해야됨

--- a/python/프로그래머스.ipynb
+++ b/python/프로그래머스.ipynb
@@ -6,7 +6,7 @@
       "name": "프로그래머스.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMm2hjteK8COzi07039LrxO",
+      "authorship_tag": "ABX9TyOP43VKpIuMN9TTNVha0WzX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -348,7 +348,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d159cc63-0268-431f-acbc-42a839fc84b1"
+        "outputId": "cfae3c1d-a89e-45e6-b8ea-00e15db63a34"
       },
       "source": [
         "num = int(input())\n",
@@ -369,14 +369,42 @@
         "    print('_'*(4*(num-m))+'그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"')\n",
         "    \n",
         "    solution(num,m-1)\n",
-        "solution(num,0)"
+        "solution(num,5)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2\n"
+            "8\n",
+            "어느 한 컴퓨터공학과 학생이 유명한 교수님을 찾아가 물었다.\n",
+            "____________\"재귀함수가 뭔가요?\"\n",
+            "____________\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.\n",
+            "____________마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.\n",
+            "____________그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"\n",
+            "어느 한 컴퓨터공학과 학생이 유명한 교수님을 찾아가 물었다.\n",
+            "________________\"재귀함수가 뭔가요?\"\n",
+            "________________\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.\n",
+            "________________마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.\n",
+            "________________그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"\n",
+            "어느 한 컴퓨터공학과 학생이 유명한 교수님을 찾아가 물었다.\n",
+            "____________________\"재귀함수가 뭔가요?\"\n",
+            "____________________\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.\n",
+            "____________________마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.\n",
+            "____________________그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"\n",
+            "어느 한 컴퓨터공학과 학생이 유명한 교수님을 찾아가 물었다.\n",
+            "________________________\"재귀함수가 뭔가요?\"\n",
+            "________________________\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.\n",
+            "________________________마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.\n",
+            "________________________그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"\n",
+            "________________________________\"재귀함수가 뭔가요?\"\n",
+            "________________________________\"재귀함수는 자기 자신을 호출하는 함수라네\"\n",
+            "________________________________라고 답변하였지.\n",
+            "어느 한 컴퓨터공학과 학생이 유명한 교수님을 찾아가 물었다.\n",
+            "____________________________\"재귀함수가 뭔가요?\"\n",
+            "____________________________\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.\n",
+            "____________________________마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.\n",
+            "____________________________그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"\n"
           ],
           "name": "stdout"
         }
@@ -428,7 +456,7 @@
         "\n",
         "recur(num,0)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,7 +484,171 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HKiMp2PElOuQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HKiMp2PElOuQ",
+        "outputId": "9b288193-de35-4ec4-df63-e853e131d2db"
+      },
+      "source": [
+        "def dfs(idx):\n",
+        "    if idx == n:\n",
+        "        for chat in last_chates:\n",
+        "            print('____'*idx, end='')\n",
+        "            print(chat)\n",
+        "        return\n",
+        "    for chat in chates:\n",
+        "        print('____'*idx, end='')\n",
+        "        print(chat)\n",
+        "    dfs(idx+1)\n",
+        "    print('____'*idx, end='')\n",
+        "    print(last)\n",
+        " \n",
+        " \n",
+        "n = int(input())\n",
+        " \n",
+        "print('어느 한 컴퓨터공학과 학생이 유명한 교수님을 찾아가 물었다.')\n",
+        " \n",
+        "chates = ['\"재귀함수가 뭔가요?\"', \n",
+        "'\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.',\n",
+        "'마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.',\n",
+        "'그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"'\n",
+        "]\n",
+        " \n",
+        "last = '라고 답변하였지.'\n",
+        " \n",
+        "last_chates = [\n",
+        "    '\"재귀함수가 뭔가요?\"', \n",
+        "    '\"재귀함수는 자기 자신을 호출하는 함수라네\"',\n",
+        "    last\n",
+        "]\n",
+        " \n",
+        " \n",
+        " \n",
+        "dfs(0)\n"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6\n",
+            "어느 한 컴퓨터공학과 학생이 유명한 교수님을 찾아가 물었다.\n",
+            "\"재귀함수가 뭔가요?\"\n",
+            "\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.\n",
+            "마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.\n",
+            "그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"\n",
+            "____\"재귀함수가 뭔가요?\"\n",
+            "____\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.\n",
+            "____마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.\n",
+            "____그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"\n",
+            "________\"재귀함수가 뭔가요?\"\n",
+            "________\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.\n",
+            "________마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.\n",
+            "________그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"\n",
+            "____________\"재귀함수가 뭔가요?\"\n",
+            "____________\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.\n",
+            "____________마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.\n",
+            "____________그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"\n",
+            "________________\"재귀함수가 뭔가요?\"\n",
+            "________________\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.\n",
+            "________________마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.\n",
+            "________________그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"\n",
+            "____________________\"재귀함수가 뭔가요?\"\n",
+            "____________________\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.\n",
+            "____________________마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.\n",
+            "____________________그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"\n",
+            "________________________\"재귀함수가 뭔가요?\"\n",
+            "________________________\"재귀함수는 자기 자신을 호출하는 함수라네\"\n",
+            "________________________라고 답변하였지.\n",
+            "____________________라고 답변하였지.\n",
+            "________________라고 답변하였지.\n",
+            "____________라고 답변하였지.\n",
+            "________라고 답변하였지.\n",
+            "____라고 답변하였지.\n",
+            "라고 답변하였지.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MZ8CqAOM5OCd"
+      },
+      "source": [
+        "array = [1, 5, 2, 6, 3, 7, 4]\n",
+        "commands = [[2, 5, 3], [4, 4, 1], [1, 7, 3]]"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T9G0Aj0xKQ6G"
+      },
+      "source": [
+        "def solution(array, commands):\n",
+        "    order = len(commands)\n",
+        "    answer = []\n",
+        "    \n",
+        "    while order != 0:\n",
+        "        i = commands[order-1][0]\n",
+        "        j = commands[order-1][1]\n",
+        "        k = commands[order-1][2]\n",
+        "        slice = array[i-1:j]\n",
+        "        slice.sort()\n",
+        "        answer.append(slice[k-1])\n",
+        "        order -= 1\n",
+        "    answer = answer[::-1]\n",
+        "    return answer"
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rtwbffUmKQ2-",
+        "outputId": "b0d89676-18bd-42af-d09b-aaa45f002837"
+      },
+      "source": [
+        "solution(array, commands)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[5, 6, 3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vbnWvsgfKQxx"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GF7Wag0ZKQvJ"
       },
       "source": [
         ""
