왜 안되는지는 이해함 이제 프로그래머스 문제도 해봐야지

--- a/python/프로그래머스.ipynb
+++ b/python/프로그래머스.ipynb
@@ -6,7 +6,7 @@
       "name": "프로그래머스.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOP43VKpIuMN9TTNVha0WzX",
+      "authorship_tag": "ABX9TyO59i6aAWzjDHHe9CHGKNgf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -581,7 +581,7 @@
         "array = [1, 5, 2, 6, 3, 7, 4]\n",
         "commands = [[2, 5, 3], [4, 4, 1], [1, 7, 3]]"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -605,7 +605,7 @@
         "    answer = answer[::-1]\n",
         "    return answer"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -620,7 +620,7 @@
       "source": [
         "solution(array, commands)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -640,7 +640,29 @@
         "id": "vbnWvsgfKQxx"
       },
       "source": [
-        ""
+        "print(\"어느 한 컴퓨터공학과 학생이 유명한 교수님을 찾아가 물었다.\")\n",
+        "\n",
+        "def what_is_recurrsion(num, repeat_num=0):\n",
+        "    \n",
+        "    blank_str = \"____\" * repeat_num\n",
+        "    print(blank_str + '\"재귀함수가 뭔가요?\"')\n",
+        "    \n",
+        "    # base\n",
+        "    if num == 0:\n",
+        "        print(blank_str+'\"재귀함수는 자기 자신을 호출하는 함수라네\"')\n",
+        "        print(blank_str+'라고 답변하였지.')\n",
+        "        return None\n",
+        "    \n",
+        "    print(blank_str + '\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.')\n",
+        "    print(blank_str + '마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.')\n",
+        "    print(blank_str + '그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"')\n",
+        "    \n",
+        "    what_is_recurrsion(num-1, repeat_num+1)\n",
+        "    \n",
+        "    print(blank_str + '라고 답변하였지.')\n",
+        "    \"재귀함수가 뭔가요?\"\n",
+        "\n",
+        "what_is_recurrsion(int(input()))"
       ],
       "execution_count": null,
       "outputs": []
